datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

model Category {
  id    String @id @default(cuid())
  name  String
  posts Post[]
}

model User {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  email     String   @unique
  password  String
  name      String?
  phone     String?
  posts     Post[]
  role      Role
}

model Post {
  id           String    @id @default(cuid())
  createdAt    DateTime  @default(now())
  updatedAt    DateTime  @updatedAt
  published    Boolean
  title        String
  content      String?
  city         String?
  state        String?
  neighborhood String?
  image        String?
  price        Decimal
  categoryId   String
  category     Category? @relation(fields: [categoryId], references: [id])
  author       User?     @relation(fields: [authorId], references: [id])
  authorId     String?
}

enum Role {
  ADMIN
  USER
}
