//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Category {
  id String [pk]
  name String [not null]
  posts Post [not null]
}

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  name String
  phone String
  posts Post [not null]
  role Role [not null]
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  city String
  state String
  neighborhood String
  image String
  price Decimal [not null]
  categoryId String [not null]
  category Category
  author User
  authorId String
}

Enum Role {
  ADMIN
  USER
}

Ref: Post.categoryId > Category.id

Ref: Post.authorId > User.id